syntax = "proto3";
option java_multiple_files = true;

package com.devProblems;

enum UserType {
  GUEST = 0;
  HOST = 1;
}

message UserReq{
    string username = 1;
    string password = 2;
    string name = 3;
    string surname = 4;
    string email = 5;
    string residency = 6;
    UserType type = 7;
}

message Created{
  bool created = 1;
}

message Empty {}

message UserTokenStateRes {
  string accessToken = 1;
  string role = 2;
}

message LoginReq {
  string username = 1;
  string password = 2;
}

service UserService {
    rpc register(UserReq) returns (Created){}
    rpc login(LoginReq) returns (UserTokenStateRes){}
}